--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 
-  <div class="wrapper">
+  <div class="wrapper formylove">
+
+    <div class="title">
+      <h3>Calculadora | KreulichDev</h3>
+    </div>
 
     <section class="screen">
       0
@@ -80,6 +84,12 @@
         </button>
         <button class="calc-button">
           &equals;
+        </button>
+      </div>
+
+      <div class="calc-button-row">
+        <button class="calc-button triple">
+          Calcular meu amor pela Maria
         </button>
       </div>
 
